<resources>
    <string name="app_name">MyStory</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="name">Name</string>
    <string name="action_sign_in">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to main activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="timeline">Timeline</string>
    <string name="contacts">Contacts</string>
    <string name="pending_request">Pending Request</string>
    <string name="current_friends">Current Connections</string>
    <!-- Strings related to invite friends -->
    <string name="title_activity_invite_friends">InviteFriends</string>
    <string name="invite_friends_intro">Connect with family and friends so you can share your timeline</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="title_activity_detailed_memory_view">DetailedMemoryView</string>


    <string-array name="suggested_questions">
        <item> What is your favorite memory from high school </item>
        <item> What do you remember most about your parents? </item>
        <item> What kinds of clothes, hobbies, slang terms were popular when your were a teenager? </item>
        <item> What was your favorite thing about school? </item>
        <item> What was your first job? </item>
        <item> Who were your role models when you were young? </item>
    </string-array>

</resources>
